Fix spacing and structure of index page and css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,10 +222,12 @@ footer {
     animation-fill-mode: forwards;
 }
 
-#cover-text, #cover-text h2, #cover-text h3 {
+#cover-text,
+#cover-text h2,
+#cover-text h3 {
     color: #353C40;
     text-align: left;
-    text-shadow:none;
+    text-shadow: none;
 }
 
 #cover-text {
@@ -235,7 +237,7 @@ footer {
     height: 150px;
     padding-top: 10px;
     padding-left: 20px;
-    background-color:rgba(222, 222, 222, 0.75);
+    background-color: rgba(222, 222, 222, 0.75);
     border-radius: 25px;
     bottom: 75px;
     right: 75px;
@@ -371,23 +373,24 @@ footer {
     height: max-content;
     padding: 2%;
     text-align: center;
-    background-color:rgba(222, 222, 222, 0.5);
+    background-color: rgba(222, 222, 222, 0.5);
     border-radius: 25px;
     margin-bottom: 5%;
     vertical-align: top;
 
 }
 
-.events > p {
-    background-color:rgba(222, 222, 222, 0);
+.events>p {
+    background-color: rgba(222, 222, 222, 0);
     padding: 0%;
 }
 
-.events > h3 {
+.events>h3 {
     font-size: 200%;
     padding: 0%;
     margin-top: 15%;
 }
+
 /* Styling for GoFundMe Logo */
 
 #gofundme-logo {
@@ -460,7 +463,7 @@ footer {
     align-items: center;
     justify-content: center;
     bottom: 15px;
-   
+
 }
 
 #gallery-menu ul {
@@ -492,16 +495,17 @@ footer {
 /* Styling for photos on gallery page */
 
 .pics {
-        margin-left: 2% ;
-        clear: both;
-        line-height: 2px;
-        column-count: 3;
-        column-gap: 2px;
+    margin-left: 2%;
+    clear: both;
+    line-height: 2px;
+    column-count: 3;
+    column-gap: 2px;
 }
 
-.pics > img {
+.pics>img {
     width: 95%;
 }
+
 /* Styling for contact-us.html */
 
 #contact-title {
@@ -618,7 +622,7 @@ textarea:focus {
 /* Styling for thank-you.html */
 
 .thank-you-container {
-    
+
     color: #353C40;
     text-align: center;
     margin: 20% 15% 30% 15%;
@@ -645,7 +649,8 @@ textarea:focus {
         ;
     }
 
-    #main-text  p, #donate-text p {
+    #main-text p,
+    #donate-text p {
         font-size: 110%;
         margin-bottom: 25px;
     }
@@ -656,6 +661,7 @@ textarea:focus {
 
     }
 }
+
 /* Breakpoint of 600px */
 
 @media screen and (max-width: 600px) {
@@ -729,6 +735,7 @@ textarea:focus {
         margin-top: 80px;
         ;
     }
+
     .contact-us-form {
         width: 100vw;
         left: 0;
